# golang_bzlmod_demo

./: .gitignore  README.md
greetings/: BUILD  MODULE.bazel  README.md  go.mod
hello/: BUILD  MODULE.bazel  README.md  go.mod  hello.go
protoexp/: BUILD  MODULE.bazel  README.md  example.go  example.proto  go.mod
simpleproto/: BUILD  MODULE.bazel  README.md  example.go  example.proto  go.mod
